# my-todo

./: .sql  Cargo.toml
src/: database.rs  lib.rs  main.rs  response.rs
src/controllers/: root.rs  tweets.rs
src/views/: home.rs
src/views/partial/: tweet.rs
templates/: _tweet.html  base.html
